--- a/index.html
+++ b/index.html
@@ -2,19 +2,37 @@
 <html lang="en">
 <head>
 
+    <!-- CDN di Fontawesome  -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- link googlefont -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito+Sans:opsz,wght@6..12,200&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&family=Tilt+Neon&family=Young+Serif&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Css Dropbox</title>
 </head>
 <body>
 
     <header>
         <nav>
             <ul class="function">
-
+                <li><img id="droplogo" src="img/logo-small.png" alt="logo Dropbox"></li>
+                <li>Perchè Dropbox</li>
+                <li>Funzioni</li>
+                <li>Piani e Prezzi</li>
             </ul>
+
             <ul class="function">
+                <li>Supporto</li>
+                <li>Contatta l'ufficio vendite</li>
+                <li>Accedi</li>
+                <li class="button">Inizia</li>
 
             </ul>
         </nav>
