--- a/index.html
+++ b/index.html
@@ -44,7 +44,35 @@
 
         <!-- div container  -->
 
-        <div>
+        <div class="container70">
+
+            <h1>
+                Tutto cio&#768; che serve per il lavoro, in un unico posto 
+            </h1>
+
+            <div class="jumbottom">
+
+                <div class="jumbo-left">
+                    <div>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.
+                    Dropbox business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente. 
+                    </div>
+
+                    <div>
+                        <span class="button">Inizia la tua prova gratuita</span>
+                    </div>
+                    
+                    <div>Annulla in qualsiasi momento</div>
+                    <div><i id="arrow" class="fa-solid fa-arrow-down"></i></div>
+
+                </div>
+
+                <div class="jumbo-right">
+                    <img id="jumbo-img" src="img/jumbo.png" alt="jumbo">
+                </div>
+
+            </div>
+
+
 
         </div>
 
