--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                             </p>
                         </div>
                         <div class="enter-right">
-                            <div class="button">Contatta l'ufficio vendite</div>
+                            <span class="button">Contatta l'ufficio vendite</span>
                         </div>
 
                     </div>
