--- a/index.html
+++ b/index.html
@@ -322,6 +322,15 @@
 
             <div class="partner">
 
+                <div class="partner-img">
+                    <img src="img/partner.png" alt="partner-img">
+                </div>
+
+                <div class="partner-text">
+                    <h3>Entra in contatto con un Partner Dropbox</h3>
+                    <p>Trova un partner Dropbox e HelloSign di fiducia </p>
+                </div>
+
             </div>
 
             <!-- Sezione Dropbox Business  -->
