--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <!-- piano di business  -->
 
-            <div class="business-top">
+            <section class="business-top">
 
                 <h2>Trova il piano Business che fa per te</h2>
                 <div>
@@ -99,7 +99,7 @@
                     </div>
                     <div></div>
                 </div>
-            </div>
+            </section>
 
             <div class="business-plan">
 
@@ -504,11 +504,35 @@
 
             <div class="center">
 
+                <div class="designit">
+                    <img src="img/designit.svg" alt="designit">
+                </div>
+                <div class="gray-row"></div>
+                <div class="gray-row none"></div>
+
+                <p>"I membri del nostro team lavorano costantemente in Paesi, Fusi orari e Uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox o Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox o Dropbox Paper."
+
+                </p>
+                <div>Morten Thomsen, Global IT Lead</div>
+
             </div>
 
             <!-- Right!   -->
 
             <div class="right">
+
+                <div class="square lightred">
+                    <img src="img/world_bicycle_relief.svg" alt="bycicle relief">
+                </div>
+                <div class="square aliceblue">
+                    <img src="img/hearst_corp.svg" alt="hearts corps">
+                </div>
+                <div class="square blue">
+                    <img src="img/lonely_planet.svg" alt="lovely planet">
+                </div>
+                <div class="square yellow">
+                    <img src="img/clear_channel.svg" alt="clear channel">
+                </div>
 
             </div>
 
@@ -518,20 +542,35 @@
 
         <div class="brand-bottom">
 
+            <div class="cont-brand-bottom">
+                <h3>
+                    Porta Dropbox Business nella tua azienda
+                </h3>
+                <div class="button back-white">
+                    Inizia la tua prova gratuita
+                </div>
+            </div>
+
         </div>
 
 
     </section>
 
     <!-- Sezione FAQ -->
-    <!-- Possibile riutilizzo del div class="conteiner60" -->
 
     <section class="faq">
 
-        <div class="title"></div>
-        <div class="questions"></div>
-        <div class="questions"></div>
-        <div class="questions"></div>
+        <div class="title">Domande Frequenti</div>
+        <div class="questions">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advance?
+
+        </div>
+        <div class="questions">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advance?
+
+        </div>
+        <div class="questions">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advance?
+            
+        </div>
+        
 
     </section>
 
